# serde-c64

./: Cargo.toml  LICENSE  README.md
crates/basic/: Cargo.toml
crates/basic/src/: lib.rs  petscii.rs  program.rs  token.rs
crates/serde-c64/: Cargo.toml
crates/serde-c64-test/: Cargo.toml
crates/serde-c64-test/src/: main.rs
crates/serde-c64/src/: error.rs  lib.rs  options.rs  ser.rs
disk/: test-output  vice.cfg
