[package]
name = "serde-c64-test"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
basic = { workspace = true }
serde = { workspace = true }
serde-c64 = { workspace = true }
